syntax = "proto3";

option go_package = "common/pb/generated;pb";

service AccountMgrService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message User {
    string id = 1;
    string email = 2;
    string password = 3;
}
